--- a/ri_lab7_igor.ipynb
+++ b/ri_lab7_igor.ipynb
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 85
         },
-        "outputId": "3e305874-db31-471d-b570-e4846db38f58"
+        "outputId": "563dca0a-a80c-46f9-feba-c648419b066a"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -59,7 +59,7 @@
         "from nltk.tokenize import sent_tokenize, word_tokenize\n",
         "import heapq as hp"
       ],
-      "execution_count": 208,
+      "execution_count": 250,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "c216eed2-29bb-4649-d835-22bcbc7cf55c"
+        "outputId": "8fb3fd2a-d849-4099-d8c5-15e864f2a608"
       },
       "source": [
         "ndoc = 16\n",
@@ -422,7 +422,7 @@
         "consulta = 'igreja nazista'\n",
         "document.title"
       ],
-      "execution_count": 218,
+      "execution_count": 260,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,7 +434,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 218
+          "execution_count": 260
         }
       ]
     },
@@ -447,13 +447,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 114
         },
-        "outputId": "c88d65f1-da11-4208-f64d-dcbce2ead8fb"
+        "outputId": "4f87dabe-b8dc-4f92-c1c8-a32247dcd555"
       },
       "source": [
         "row = dataframe.loc[dataframe.url == document.url]\n",
         "row"
       ],
-      "execution_count": 219,
+      "execution_count": 261,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -513,7 +513,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 219
+          "execution_count": 261
         }
       ]
     },
@@ -577,13 +577,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 359
         },
-        "outputId": "2350aa6e-f755-4e5c-d4d1-fc29e38e9d2e"
+        "outputId": "0d783fe0-dea9-4355-aa31-a880b6b6480b"
       },
       "source": [
         "table = createTable(consulta, dataframe)\n",
         "table"
       ],
-      "execution_count": 221,
+      "execution_count": 263,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 221
+          "execution_count": 263
         }
       ]
     },
@@ -718,7 +718,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 80
         },
-        "outputId": "db4ed798-9866-4e84-d90b-5824461d9bb9"
+        "outputId": "68616d2e-9533-49e1-f490-3bda0b140a9b"
       },
       "source": [
         "def reciprocalRank(entry, docId):\n",
@@ -738,7 +738,7 @@
         "\n",
         "rank"
       ],
-      "execution_count": 222,
+      "execution_count": 264,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -788,7 +788,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 222
+          "execution_count": 264
         }
       ]
     },
@@ -852,7 +852,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
-        "outputId": "6dfb80c3-a235-454a-e035-f26ee941301d"
+        "outputId": "a06f3a83-a521-4a81-a3f9-13f2002640f0"
       },
       "source": [
         "def indexes(model):\n",
@@ -902,7 +902,7 @@
         "  return binarioMAP, tfMAP, tf_idfMAP, BM25MAP\n",
         "list(feedback.keys())"
       ],
-      "execution_count": 224,
+      "execution_count": 266,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +923,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 224
+          "execution_count": 266
         }
       ]
     },
@@ -959,12 +959,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "51ed4cd8-2b06-4d8a-d595-c63b42f777f7"
+        "outputId": "ad194b80-a43c-4d3f-842c-5345b87a833c"
       },
       "source": [
         "mapBinario"
       ],
-      "execution_count": 226,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -976,7 +976,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 226
+          "execution_count": 268
         }
       ]
     },
@@ -989,12 +989,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "34414f80-b0b2-4bff-fc24-dfb8ec201a90"
+        "outputId": "55857ea7-957b-4b9a-fe37-2f5f5fb6bf8c"
       },
       "source": [
         "mapTF"
       ],
-      "execution_count": 227,
+      "execution_count": 269,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1006,7 +1006,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 227
+          "execution_count": 269
         }
       ]
     },
@@ -1019,12 +1019,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "021382bd-57cf-47eb-d7e8-e4b3f5ec0c4d"
+        "outputId": "b7331d1b-d1fe-4ca6-82dd-154e815dcf93"
       },
       "source": [
         "mapTf_idf"
       ],
-      "execution_count": 228,
+      "execution_count": 270,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,7 +1036,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 228
+          "execution_count": 270
         }
       ]
     },
@@ -1049,12 +1049,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "566d97b6-fba0-47b8-c856-4a1d056b08e0"
+        "outputId": "ccaa2c2e-fa88-4126-a6ff-9d8d3c659dea"
       },
       "source": [
         "mapBM25"
       ],
-      "execution_count": 229,
+      "execution_count": 271,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,190 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 229
+          "execution_count": 271
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Rp2hkBSo-3q7",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 3. Repita Q2 usando a avaliação multi-nível DCG. Utilize o campo \"level\" do gabarito para o cálculo do DCG e do idealDCG. Use uma janela de 5 documentos"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXBkJLhb-_oR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def dcg(model, docs):\n",
+        "  dcg = 0\n",
+        "  for i in range(1,len(model)+1):\n",
+        "    doc = model[i-1]\n",
+        "    lvl = docs[doc] if doc in docs else 0\n",
+        "    dcg += (2^lvl) / np.log2(i + 1)\n",
+        "    \n",
+        "  return dcg\n",
+        "\n",
+        "def dcgModels(consulta):\n",
+        "  docs = {}\n",
+        "\n",
+        "  for info in feedback[consulta]:\n",
+        "    row = dataframe.loc[dataframe.url == info['URL']]\n",
+        "    docs[row.index[0]] = info['level']\n",
+        "    \n",
+        "  binario, tf, tfidf, BM25 = create_models(consulta, 5)\n",
+        "  binario = indexes(binario)\n",
+        "  tf = indexes(tf)\n",
+        "  tfidf = indexes(tfidf)\n",
+        "  BM25 = indexes(BM25)\n",
+        "  \n",
+        "  binarioDCG = dcg(binario, docs)\n",
+        "  tfDCG = dcg(tf, docs)\n",
+        "  tf_idfDCG = dcg(tfidf, docs)\n",
+        "  BM25DCG = dcg(BM25, docs)\n",
+        "  \n",
+        "  return binarioDCG, tfDCG, tf_idfDCG, BM25DCG"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "trZD04b2Ak7F",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "binarioDCG, tfDCG, tf_idfDCG, BM25DCG = dcgModels('golpe militar')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kdPCcH-GBASB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f372850e-2aaa-4964-a9a6-5720cc3d6b71"
+      },
+      "source": [
+        "binarioDCG"
+      ],
+      "execution_count": 274,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.8969182377587845"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 274
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vs5aZAVBBAmy",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3a478bf2-75f6-445f-eed9-67e43225f950"
+      },
+      "source": [
+        "tfDCG"
+      ],
+      "execution_count": 275,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.05030102812575"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 275
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ttEf259UBA2V",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "2891097a-d252-415a-b0df-f14e0af370e0"
+      },
+      "source": [
+        "tf_idfDCG"
+      ],
+      "execution_count": 276,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.396918237758785"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 276
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Un53sFZfBBLz",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d761c59b-96e3-4703-a231-e5001111d6b4"
+      },
+      "source": [
+        "BM25DCG"
+      ],
+      "execution_count": 277,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.396918237758785"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 277
         }
       ]
     }
